--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "document-management-system",
   "version": "0.0.1",
   "description": "A system that makes documents management easy",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "start":"node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
